# aeris

./: Cargo.toml  LICENSE
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-test.yml  ci-check.yml
cli/: Cargo.toml
cli/src/: lib.rs
constants/src/: lib.rs
core/: Cargo.toml
core/src/: acm.rs  lib.rs  syntax.rs
core/src/acm/: block.rs  function.rs  global.rs  instruction.rs  module.rs  uid.rs
core/src/ls/event/: dispatcher.rs
core/src/syntax/: context.rs  event.rs  token.rs  tree.rs
core/tests/json_syntax/: main.rs  syntax.rs  value.rs
daemon/: Cargo.toml
daemon/src/: main.rs
language_server/: Cargo.toml
standard/: Cargo.toml
standard/cli/: Cargo.toml
standard/cli/src/: main.rs
standard/constants/: Cargo.toml
standard/constants/src/: lib.rs
standard/core/: Cargo.toml
standard/core/src/: function.rs  lib.rs  module.rs  syntax.rs
standard/core/src/syntax/: context.rs  identifier.rs  token.rs
standard/core/src/syntax/context/: span.rs
standard/language-server/: Cargo.toml
standard/language_server/: Cargo.toml
standard/language_server/src/: main.rs
standard_core/: Cargo.toml
standard_core/src/: syntax.rs
