[package]
name    = "aeris-standard-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aeris-standard-core = { path = "../core" }
aeris-constants     = { path = "../constants" }
clap                = { version = "4.5", features = ["derive"] }
rayon               = { version = "1.11" }
tokio               = { version = "1.47", features = ["full"] }
